# valida

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
doc/: custom.md  dsl_vs_macros.md  errors.md  get_started.md  localization.md  nested.md  rules.md
locales/: valida.yml
src/: lib.rs  prelude.rs
src/core/: builder.rs  contract.rs  errors.rs  mod.rs  nested_wrapper.rs  primitive.rs  valida_error.rs
src/core/features/localization/: mod.rs
src/core/features/localization/i18n/: mod.rs  pretty_print_i18n.rs  to_json_dot_i18n.rs  to_json_form_i18n.rs  to_json_i18n.rs  valida_backend.rs
src/core/field_builder/: impl_common.rs  impl_custom.rs  impl_nested.rs  impl_numeric.rs  impl_slice.rs  impl_strings.rs  main.rs  mod.rs
src/core/rules/: byte_ref.rs  mod.rs  nested.rs  slice_ref.rs  str_ref.rs  value_ref.rs
src/core/rules/common/: mod.rs  not_empty.rs  not_none.rs
src/core/rules/numeric/: greater_than.rs  less_than.rs  max_value.rs  min_value.rs  mod.rs  negative.rs  negative_or_zero.rs  positive.rs  positive_or_zero.rs  range.rs
src/core/rules/slice/: each_rule.rs  exact_items.rs  max_items.rs  min_items.rs  mod.rs
src/core/rules/string/: charset.rs  cidr.rs  email.rs  encoding_charset.rs  hostname.rs  json.rs  lowercased.rs  mac_address.rs  max_length.rs  min_length.rs  mod.rs  no_suspicious_characters.rs  one_of.rs  password_strength.rs  regex_match.rs  trimmed.rs  uppercased.rs  url.rs  uuid_valid.rs  uuid_version.rs  word_count.rs
valida_derive/: Cargo.toml
valida_derive/src/: lib.rs  validator_macro.rs
