[package]
name = "valida_derive"
version = "2.0.0"
edition = "2024"
license = "MIT"
authors = ["Bordunos Pavel <bordunos.p@gmail.com>"]
repository = "https://github.com/bordunosp/valida"
description = "valida - Validator"

[lib]
proc-macro = true

[dependencies]
async-trait = "0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
